fixed alignment issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -6,22 +6,15 @@
 	background: url("../img/grid-bg.png") repeat-y;
 }
 
-.container {
-    background: teal;
-    position: relative;
-/*    min-height: 210px;*/
-    border-radius: 10px;
 
-/*    left: 50%;
-    margin-left: -444px;*/
-    margin-top: 100px;
-    box-shadow: 0px 0px 50px 10px rgba(68, 68, 68, .8);
+span{
+font-align: center;
 }
-
  ul{
- text-align: left;
+ text-align: center;
+ font-size: 30px;
 line-height:1.25em;
-margin-bottom: 1em;
+
 }
 
 h1{
@@ -48,15 +41,16 @@ ul{
 font-weight: normal;
 font-size: 18px;
 text-decoration: none;
-text-alignment: left;
+text-align: left;
 margin: 10px 0px 0px 0px;
 }
 li{
 font-weight: normal;
-font-size: 18px;
+font-size: 20px;
 text-decoration: none;
 list-style-type: none;
-text-alighment: left;
+text-align: left;
+margin: 0px -25px 0px 0px;
 
 }
 
@@ -73,7 +67,7 @@ text-alignment: left;
     position: fixed;
     top:0;
     left:0;
-    z-index: 10;
+    z-index: 20;
     width: 100%;
     background: white;
     line-height: 5px;
